# ngs45

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
bench/: BENCHMARK_FINAL.txt  BENCHMARK_MODERN.txt  MORNING_CHECK.md  README.md  RESULTS_TABLE.md  benchmark_final.tsv  benchmark_modern.tsv  benchmark_results.tsv  consolidate.py  download_hifi_subset.sh  draw_pipeline.py  figure1_points.tsv  make_figures.py  manifest.tsv  manifest_hifi_long.tsv  manifest_modern.tsv  manifest_v2.tsv  master.tsv  plot_size_vs_time.py  qc.tsv  qc_all_datasets.tsv  reselect_hifi_long.sh  results_expansion.tsv  results_summary.tsv  results_v2.tsv  results_v3.tsv  run_after_concurrent.sh  run_definitive.sh  run_hifi_rescue.sh  run_isolated_timing.sh  run_modern_benchmark.sh  run_overnight.sh  run_qc.sh  select_accessions.sh  timing.tsv  timing_isolated.tsv  trunc_titration.tsv
docs/: ASSEMBLY_LIMITATION.md  ASSEMBLY_QC.md  BENCHMARK.md  DATA_ACCESSIONS.md  FIGURES.md  PIPELINE.md  QC.md  TROUBLESHOOTING.md  pipeline.dot
recipe/: meta.yaml
scripts/: ngs45_env.sh
src/ngs45/: __init__.py  batch.py  cli.py  config.py  external.py  io.py  pipeline.py
src/ngs45/data/: CM_PROVENANCE.md  rrna_ssu_lsu.cm  seed_arabidopsis_45S.fasta
src/ngs45/stages/: __init__.py  annotate.py  assemble.py  bait.py  orient.py  qc.py  report.py  resolve.py  variant.py
tests/: test_basic.py
